--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 
 <html lang="en">
 <head>
@@ -10,6 +10,6 @@
 </head>
 
 <body>
-  BitMachinne
+    <h1>BitMachine</h1>
 </body>
 </html>
