Pipe fixes and tests installer

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                   <a href="" class="dropdown-toggle" data-toggle="dropdown"><img id="bitmachine-web-button" src="images/HTML5_Badge_32.png"/>Web <b class="caret"></b></a>
                   <ul class="dropdown-menu" role="menu">
                     <li><a href="" id="load-bitos-from-web">Boot BitOS from Web</a></li>
+                    <li role="presentation" class="divider"></li>
                     <li><a href="" id="load-bitos-from-web-torture">Torture Test</a></li>
+                    <li><a href="" id="install-tests-from-web">Install Tests from Web</a></li>
                     <li role="presentation" class="divider"></li>
                     <li><a href="" id="load-bitos-fs-from-web">Initialise Filesystem from Web</a></li>
                   </ul>
