--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     <li><a href="" id="load-bitos-from-web">Boot BitOS from Web</a></li>
                     <li role="presentation" class="divider"></li>
                     <li><a href="" id="load-bitos-from-web-torture">Torture Test</a></li>
-                    <li><a href="" id="install-tests-from-web">Install Tests from Web</a></li>
                     <li role="presentation" class="divider"></li>
+                    <li><a href="" id="install-tests-from-web">Install Tests from Web</a></li>
                     <li><a href="" id="load-bitos-fs-from-web">Initialise Filesystem from Web</a></li>
                   </ul>
                 </li>
@@ -68,8 +68,9 @@
                     <li><a href="" id="load-bitos-from-gdfs">Boot BitOS from Google Drive</a></li>
                     <li role="presentation" class="divider"></li>
                     <li><a href="" id="save-to-gdfs">Save Map to Google Drive</a></li>
-                    <li role="presentation" class="divider"></li>
                     <li><a href="" id="install-drive-app">Install Drive App</a></li>
+                    <li role="presentation" class="divider"></li>
+                    <li><a href="" id="install-tests-from-gdfs">Install Tests from Googl Drive</a></li>
                     <li><a href="" id="load-bitos-fs">Initialise Filesystem from Google Grive</a></li>
                     
                   </ul>
