--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <li><a href="" id="save-to-gdfs">Save Map to Google Drive</a></li>
                     <li><a href="" id="install-drive-app">Install Drive App</a></li>
                     <li role="presentation" class="divider"></li>
-                    <li><a href="" id="install-tests-from-gdfs">Install Tests from Googl Drive</a></li>
+                    <li><a href="" id="install-tests-from-gdfs">Install Tests from Google Drive</a></li>
                     <li><a href="" id="load-bitos-fs">Initialise Filesystem from Google Grive</a></li>
                     
                   </ul>
